rendering an example open layers map and linking it to the map model

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shopping Cart with Backbone</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Mapping with Backbone</title>
+    <link rel="stylesheet" type="text/css" href="css/screen.css">
   </head>
   <body>
     <div id="map-wrapper"></div>
