--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <ul id="layers-control"></ul>
       <button id="clearLayers">Clear Layers</button>
     </section>
+
+    <div id="" class="">
+      <ul id="features"><ul>
+    </div>
     
 
     
@@ -37,6 +41,9 @@
     <script id="progressBarTemplate" type="text/template">
           <span id="progress-bar"><%= current %> / <%= total %> loaded.</span>
     </script>
+    <script id="featureTemplate" type="text/template">
+          <pre><%= response %></pre>
+    </script>
     <!-- /templates -->
     <script src="http://openlayers.org/dev/OpenLayers.js"></script>
     <script src="js/lib/jquery-1.9.1.min.js"></script>
@@ -44,13 +51,14 @@
     <script src="js/lib/backbone-min.js"></script>
     <script src="js/models/Layer.js"></script>
     <script src="js/models/Map.js"></script>
+    <script src="js/models/Feature.js"></script>
     <script src="js/models/Progress.js"></script>
     <script src="js/collections/LayerCollection.js"></script>
     <script src="js/views/MapView.js"></script>
     <script src="js/views/LayerView.js"></script>
     <script src="js/views/LayerCollectionView.js"></script>
-    <script src="js/views/LayerCollectionController.js"></script>
     <script src="js/views/ProgressView.js"></script>
+    <script src="js/views/FeatureView.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
