add vector point layer for finding a given points coordinates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/screen.css">
   </head>
   <body>
-    <div id="map-wrapper"></div>
+    <div id="map-wrapper" class="fl"></div>
     <div id="pro"></div>
     <!-- layer filter -->
     <!--<form id="filter">
@@ -15,7 +15,7 @@
     <a href="#" id="clear-filter">Clear Filter</a>-->
     <!-- /layer filter -->
 
-    <div id="map-controls" class="">
+    <div id="map-controls" class="fl">
       <h3>Select Layers</h3>
       <ul id="layers-control"></ul>
       <button id="clearLayers">Clear Layers</button>
