--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <h3>Select Layers</h3>
       <ul id="layers-control"></ul>
       <button id="clearLayers">Clear Layers</button>
-      <ul id="layers-control"></ul>
       <ul id="features"></ul>
       <div id="tools"></div>
       <div id="distance"></div>
@@ -61,7 +60,7 @@
     </script>
     
     <!-- /templates -->
-    <script src="js/lib/OpenLayers.js"></script>
+    <!--<script src="js/lib/OpenLayers.js"></script>
     <script src="js/lib/jquery-1.9.1.min.js"></script>
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/backbone-min.js"></script>
@@ -83,6 +82,7 @@
     <script src="js/views/MeasuringToolView.js"></script>
     <script src="js/views/MeasuringToolCollectionView.js"></script>
     <script src="js/views/StatisticView.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>-->
+    <script src="js/build/app.min.js"></script>
   </body>
 </html>
