added layer enable/disable based on whether a layer is available at the current map resolution | added inuit.css but excluded the base inuit project

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <!-- templates -->
     <script id="layerTemplate" type="text/template">
-          <label for="<%= name %>" <% if(!loaded) { %> class="disabled"  disabled <% } %>>
-          <input type="checkbox" name="<%= name %>" class="layer-toggle" <% if(visibility) { %> checked<% } %> <% if(!loaded) { %> disabled<% } %>/>
+          <label for="<%= name %>" <% if(!loaded || !enabled) { %> class="disabled"  disabled <% } %>>
+          <input type="checkbox" name="<%= name %>" class="layer-toggle" <% if(visibility) { %> checked<% } %> <% if(!loaded || !enabled) { %> disabled<% } %>/>
           <%= title %>
           </label>
     </script>
