--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mapping with Backbone</title>
+    <title>Mapping with Backbone and OpenLayers.js</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
   </head>
