--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mapping with Backbone and OpenLayers.js</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
   </head>
@@ -58,6 +62,9 @@
               <li><%= prop %>: <%= feature.model.attributes[prop] %></li>
             <% } %>
             </ul>
+    </script>
+    <script id="layerGroupTemplate" type="text/template">
+          <span></span>
     </script>
     
     <!-- /templates -->
